Added directories.h and directories_windows.cpp into the Windows project. Created new Linux (from Visual Studio) project. Modified directories_posix.cpp to conform better to the POSIX standard - also, to make it compile under Linux. Excluded another test that is causing an stack overflow from runtime_duktape.cpp.

--- a/test262_harness_cpp_windows.vcxproj
+++ b/test262_harness_cpp_windows.vcxproj
@@ -19,11 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="directories_windows.cpp" />
     <ClCompile Include="harness.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="metadata.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="directories.h" />
     <ClInclude Include="harness.h" />
     <ClInclude Include="metadata.h" />
   </ItemGroup>
